--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <nav class="navbar">
         <a href="index.html" class="nav-link active">Ciekawe</a>
-        <a href="biegi.html" class="nav-link">Ranking</a>
-        <a href="szachy.html" class="nav-link">Szkoła</a>
+        <a href="ranking.html" class="nav-link">Ranking</a>
+        <a href="szkola.html" class="nav-link">Szkoła</a>
         <a href="inne.html" class="nav-link">Inne</a>
     </nav>
     <br><br><br><br>
