--- a/szkola.html
+++ b/szkola.html
@@ -18,6 +18,33 @@
         <h1>Szkoła</h1>
         <div class="table-wrapper">
             <table border="1">
+                <tr><td><a href=""></a></td></tr>
+                <tr><td><a href=""></a></td></tr>
+                <tr><td><a href=""></a></td></tr>
+                <tr><td><a href=""></a></td></tr>
+                <tr><td><a href=""></a></td></tr>
+                <tr><td><a href="20250304_for4.html">For 4</a></td></tr>
+                <tr><td><a href="20250304_formularze.html">Formularze</a></td></tr>
+                <tr><td><a href="20250226_tekst1.html">Usuwanie Samogłosek 2</a></td></tr>
+                <tr><td><a href="20250225_strony2.html">Barcelona</a></td></tr>
+                <tr><td><a href="20250221_tekst.html">Usuwanie Samogłosek</a></td></tr>
+                <tr><td><a href="20250219_kalkulatorBMI2.html">BMI 2</a></td></tr>
+                <tr><td><a href="20250219_for3.html">For Zagnieżdżony</a></td></tr>
+                <tr><td><a href="20250219_for2.html">For 2</a></td></tr>
+                <tr><td><a href="20250218_tabelka.html">Kartkówka Tabelka</a></td></tr>
+                <tr><td><a href="20250218_dawid.html">Kartkówka Strona</a></td></tr>
+                <tr><td><a href="20250218_kalkulatorBMI.html">Kalkulator BMI</a></td></tr>
+                <tr><td><a href="20250211_for.html">For</a></td></tr>
+                <tr><td><a href="20250205_switch.html">Switch</a></td></tr>
+                <tr><td><a href="20250116_25XD.html">2 - 5</a></td></tr>
+                <tr><td><a href="20241211_ifelse3.html">Instrukcja Warunkowa 2</a></td></tr>
+                <tr><td><a href="20241204_ifelse2.html">Instrukcja Warunkowa</a></td></tr>
+                <tr><td><a href="20241128_gradient.html">Gradient</a></td></tr>
+                <tr><td><a href="20241127_obiekty.html">Obiekty</a></td></tr>
+                <tr><td><a href="20241127_ifelse.html">Wstęp</a></td></tr>
+                <tr><td><a href="20241127_pai3.html">Zdarzenia</a></td></tr>
+                <tr><td><a href="20241126_pai2.html">Zdarzenia</a></td></tr>
+                <tr><td><a href="20241122_pai.html">PAI Zadanie 1</a></td></tr>
             </table>
         </div>
     </div>
