--- a/szkola.html
+++ b/szkola.html
@@ -42,7 +42,7 @@
                 <tr><td><a href="20241128_gradient.html">Gradient</a></td></tr>
                 <tr><td><a href="20241127_obiekty.html">Obiekty</a></td></tr>
                 <tr><td><a href="20241127_ifelse.html">Wstęp</a></td></tr>
-                <tr><td><a href="20241127_pai3.html">Zdarzenia</a></td></tr>
+                <tr><td><a href="20241127_pai3.html">Zdarzenia 2</a></td></tr>
                 <tr><td><a href="20241126_pai2.html">Zdarzenia</a></td></tr>
                 <tr><td><a href="20241122_pai.html">PAI Zadanie 1</a></td></tr>
             </table>
