--- a/szkola.html
+++ b/szkola.html
@@ -18,11 +18,15 @@
         <h1>Szkoła</h1>
         <div class="table-wrapper">
             <table border="1">
-                <tr><td><a href=""></a></td></tr>
-                <tr><td><a href=""></a></td></tr>
-                <tr><td><a href=""></a></td></tr>
-                <tr><td><a href=""></a></td></tr>
-                <tr><td><a href=""></a></td></tr>
+                <tr><td><a href="20250514_tablice4.html">Tablice 4</a></td></tr>
+                <tr><td><a href="20250430_tablice3.html">Tablice 3</a></td></tr>
+                <tr><td><a href="20250423_tablice2.html">Tablice 2</a></td></tr>
+                <tr><td><a href="20250416_tablice1.html">Tablice 1</a></td></tr>
+                <tr><td><a href="20250415_formularzkontaktowy.html">Formularz Kontaktowy</a></td></tr>
+                <tr><td><a href="20250408_logowanie.html">Formularz Logowania</a></td></tr>
+                <tr><td><a href="20250326_dowhile3.html">Do While 3</a></td></tr>
+                <tr><td><a href="20250326_dowhile2.html">Do While 2</a></td></tr>
+                <tr><td><a href="20250326_dowhile.html">Do While</a></td></tr>
                 <tr><td><a href="20250304_for4.html">For 4</a></td></tr>
                 <tr><td><a href="20250304_formularze.html">Formularze</a></td></tr>
                 <tr><td><a href="20250226_tekst1.html">Usuwanie Samogłosek 2</a></td></tr>
@@ -31,8 +35,7 @@
                 <tr><td><a href="20250219_kalkulatorBMI2.html">BMI 2</a></td></tr>
                 <tr><td><a href="20250219_for3.html">For Zagnieżdżony</a></td></tr>
                 <tr><td><a href="20250219_for2.html">For 2</a></td></tr>
-                <tr><td><a href="20250218_tabelka.html">Kartkówka Tabelka</a></td></tr>
-                <tr><td><a href="20250218_dawid.html">Kartkówka Strona</a></td></tr>
+                <tr><td><a href="20250218_dawid.html">Kartkówka</a></td></tr>
                 <tr><td><a href="20250218_kalkulatorBMI.html">Kalkulator BMI</a></td></tr>
                 <tr><td><a href="20250211_for.html">For</a></td></tr>
                 <tr><td><a href="20250205_switch.html">Switch</a></td></tr>
