--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1>Ciekawe Strony</h1>
         <div class="table-wrapper">
             <table border="1">
+                <tr><td><a href="kolofortuny.html">Koło Fortuny</a></td></tr>
                 <tr><td><a href="kostka.html">Kostka do Gry</a></td></tr>
             </table>
         </div>
