--- a/gry.html
+++ b/gry.html
@@ -9,15 +9,16 @@
 <body>
     <nav class="navbar">
         <a href="index.html" class="nav-link">Ciekawe</a>
-        <a href="ranking.html" class="nav-link active">Ranking</a>
+        <a href="gry.html" class="nav-link active">Gry</a>
         <a href="szkola.html" class="nav-link">Szkoła</a>
         <a href="inne.html" class="nav-link">Inne</a>
     </nav>
     <br><br><br><br>
     <div class="container">
-        <h1>Rankingi</h1>
+        <h1>Gry</h1>
         <div class="table-wrapper">
             <table border="1">
+                <tr><td><a href="kosmicznykwadrat.html">Kosmiczny Kwadrat</a></td></tr>
             </table>
         </div>
     </div>
