--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <a href="index.html" class="nav-link active">Ciekawe</a>
-        <a href="ranking.html" class="nav-link">Ranking</a>
+        <a href="gry.html" class="nav-link">Gry</a>
         <a href="szkola.html" class="nav-link">Szkoła</a>
         <a href="inne.html" class="nav-link">Inne</a>
     </nav>
