--- a/gry.html
+++ b/gry.html
@@ -19,6 +19,7 @@
         <div class="table-wrapper">
             <table border="1">
                 <tr><td><a href="kosmicznykwadrat.html">Kosmiczny Kwadrat</a></td></tr>
+                <tr><td><a href="ucieczka.html">Ucieczka</a></td></tr>
             </table>
         </div>
     </div>
