--- a/gry.html
+++ b/gry.html
@@ -3,26 +3,293 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dawi_108</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Avoid the Blocks! - Lewo/Prawo</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #222;
+            font-family: 'Arial', sans-serif;
+            color: white;
+            text-align: center;
+        }
+
+        #gameCanvas {
+            background-color: #333;
+            border: 2px solid #555;
+            display: block; /* Usuwa białe marginesy pod canvasem */
+            touch-action: none; /* Zapobiega przewijaniu strony na dotyku */
+        }
+
+        #scoreDisplay {
+            position: absolute;
+            top: 20px;
+            font-size: 2em;
+            color: #eee;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+        }
+
+        #gameOverScreen {
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.8);
+            width: 100%;
+            height: 100%;
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 1.5em;
+        }
+
+        #restartButton {
+            padding: 15px 30px;
+            font-size: 1.2em;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
+        }
+
+        #restartButton:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar">
-        <a href="index.html" class="nav-link">Ciekawe</a>
-        <a href="gry.html" class="nav-link active">Gry</a>
-        <a href="szkola.html" class="nav-link">Szkoła</a>
-        <a href="inne.html" class="nav-link">Inne</a>
-    </nav>
-    <br><br><br><br>
-    <div class="container">
-        <h1>Gry</h1>
-        <div class="table-wrapper">
-            <table border="1">
-                <tr><td><a href="kosmicznykwadrat.html">Kosmiczny Kwadrat</a></td></tr>
-                <tr><td><a href="ucieczka.html">Ucieczka</a></td></tr>
-            </table>
-        </div>
+    <canvas id="gameCanvas"></canvas>
+    <div id="scoreDisplay">Punkty: 0</div>
+    <div id="gameOverScreen">
+        <h2>Koniec Gry!</h2>
+        <p>Twój wynik: <span id="finalScore">0</span></p>
+        <button id="restartButton">Zagraj ponownie</button>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
+        const scoreDisplay = document.getElementById('scoreDisplay');
+        const gameOverScreen = document.getElementById('gameOverScreen');
+        const finalScoreDisplay = document.getElementById('finalScore');
+        const restartButton = document.getElementById('restartButton');
+
+        canvas.width = 300; // Szerokość obszaru gry
+        canvas.height = 500; // Wysokość obszaru gry
+
+        // Parametry gracza
+        const playerSize = 30;
+        let playerX = (canvas.width / 2) - (playerSize / 2); // Początkowa pozycja na środku
+        const playerY = canvas.height - playerSize * 3; // Stała pozycja Y gracza, trochę wyżej
+        const playerColor = '#4CAF50';
+        let touchStartX = 0; // Początkowa pozycja dotyku
+        let playerVelocityX = 0; // Prędkość gracza w poziomie
+        const playerAcceleration = 0.8; // Przyspieszenie gracza przy przesuwaniu
+        const maxPlayerSpeed = 7; // Maksymalna prędkość gracza
+        const friction = 0.9; // Tarcie spowalniające gracza
+
+        // Parametry bloków
+        const blockSize = 30; // Wysokość bloku
+        let blockWidth = 80; // Szerokość pojedynczego bloku
+        const blockColor = '#FF6347';
+        let blocks = [];
+        let blockSpawnInterval = 800; // Co ile ms pojawia się nowy blok
+        let lastBlockSpawnTime = 0;
+        const blockFallSpeed = 2; // Prędkość spadania bloków
+        let minGapWidth = 70; // Minimalna szerokość przerwy
+        let maxGapWidth = 150; // Maksymalna szerokość przerwy
+
+        // Stan gry
+        let score = 0;
+        let gameOver = false;
+        let gameRunning = false;
+
+        // Funkcje rysowania
+        function drawPlayer() {
+            ctx.fillStyle = playerColor;
+            ctx.fillRect(playerX, playerY, playerSize, playerSize);
+        }
+
+        function drawBlocks() {
+            ctx.fillStyle = blockColor;
+            blocks.forEach(block => {
+                ctx.fillRect(block.x, block.y, block.width, block.height);
+            });
+        }
+
+        // Funkcja aktualizacji stanu gry
+        function update() {
+            if (gameOver || !gameRunning) return;
+
+            // Czyść canvas
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // Aktualizuj pozycję gracza
+            playerX += playerVelocityX;
+            playerVelocityX *= friction; // Zastosuj tarcie
+
+            // Ogranicz gracza do granic canvasa
+            if (playerX < 0) {
+                playerX = 0;
+                playerVelocityX = 0;
+            }
+            if (playerX + playerSize > canvas.width) {
+                playerX = canvas.width - playerSize;
+                playerVelocityX = 0;
+            }
+
+            // Ruch bloków w dół
+            blocks.forEach(block => {
+                block.y += blockFallSpeed;
+            });
+
+            // Usuwanie bloków poza ekranem i zwiększanie punktów
+            blocks = blocks.filter(block => {
+                if (block.y > canvas.height) {
+                    score++; // Zwiększ punkty, jeśli blok zszedł z ekranu
+                    return false; // Usuń blok
+                }
+                return true;
+            });
+
+            // Sprawdzanie kolizji
+            blocks.forEach(block => {
+                if (playerX < block.x + block.width &&
+                    playerX + playerSize > block.x &&
+                    playerY < block.y + block.height &&
+                    playerY + playerSize > block.y) {
+                    endGame();
+                }
+            });
+
+            // Sprawdzanie czy czas na nowy blok
+            const currentTime = performance.now();
+            if (currentTime - lastBlockSpawnTime > blockSpawnInterval) {
+                spawnBlock();
+                lastBlockSpawnTime = currentTime;
+                // Stopniowe zwiększanie trudności
+                if (blockSpawnInterval > 300) {
+                    blockSpawnInterval -= 5;
+                }
+                if (blockFallSpeed < 5) { // Ogranicz prędkość spadania
+                   // blockFallSpeed += 0.005; // Stopniowo zwiększaj prędkość spadania
+                }
+                minGapWidth = Math.max(playerSize * 1.5, minGapWidth - 0.5); // Zmniejsz przerwę, ale nie za bardzo
+                maxGapWidth = Math.max(playerSize * 2, maxGapWidth - 1);
+            }
+
+
+            // Rysowanie
+            drawPlayer();
+            drawBlocks();
+            scoreDisplay.textContent = `Punkty: ${score}`;
+
+            requestAnimationFrame(update);
+        }
+
+        // Funkcja tworzenia nowego bloku
+        function spawnBlock() {
+            const gapWidth = Math.random() * (maxGapWidth - minGapWidth) + minGapWidth;
+            const gapX = Math.random() * (canvas.width - gapWidth); // Początek przerwy
+
+            // Lewy blok
+            if (gapX > 0) {
+                blocks.push({
+                    x: 0,
+                    y: -blockSize, // Pojawia się nad ekranem
+                    width: gapX,
+                    height: blockSize
+                });
+            }
+
+            // Prawy blok
+            if (gapX + gapWidth < canvas.width) {
+                blocks.push({
+                    x: gapX + gapWidth,
+                    y: -blockSize,
+                    width: canvas.width - (gapX + gapWidth),
+                    height: blockSize
+                });
+            }
+        }
+
+        // --- Obsługa dotyku/myszy ---
+        function handleStart(event) {
+            event.preventDefault(); // Zapobiegaj domyślnemu zachowaniu przeglądarki (np. przewijaniu)
+            if (gameOver) return;
+            if (!gameRunning) {
+                startGame();
+            }
+            touchStartX = (event.touches ? event.touches[0].clientX : event.clientX);
+        }
+
+        function handleMove(event) {
+            event.preventDefault();
+            if (!gameRunning) return;
+            const currentX = (event.touches ? event.touches[0].clientX : event.clientX);
+            const deltaX = currentX - touchStartX;
+
+            playerVelocityX += deltaX * playerAcceleration / 10; // Mniejsze wartości dla płynniejszego ruchu
+            playerVelocityX = Math.max(-maxPlayerSpeed, Math.min(playerVelocityX, maxPlayerSpeed)); // Ogranicz prędkość
+
+            touchStartX = currentX; // Zaktualizuj początkową pozycję dotyku
+        }
+
+        function handleEnd(event) {
+            event.preventDefault();
+            // Możesz tutaj dodać logikę zwalniania, jeśli nie używasz tarcia
+        }
+
+        // Funkcja rozpoczęcia gry
+        function startGame() {
+            gameOver = false;
+            gameRunning = true;
+            score = 0;
+            blocks = [];
+            playerX = (canvas.width / 2) - (playerSize / 2);
+            blockSpawnInterval = 800;
+            minGapWidth = 70;
+            maxGapWidth = 150;
+            lastBlockSpawnTime = performance.now(); // Zresetuj czas spawnowania
+
+            gameOverScreen.style.display = 'none';
+            scoreDisplay.style.display = 'block';
+
+            update(); // Rozpocznij pętlę gry
+        }
+
+        // Funkcja zakończenia gry
+        function endGame() {
+            gameOver = true;
+            gameRunning = false;
+            finalScoreDisplay.textContent = score;
+            gameOverScreen.style.display = 'flex';
+            scoreDisplay.style.display = 'none';
+        }
+
+        // Event Listenery
+        canvas.addEventListener('mousedown', handleStart);
+        canvas.addEventListener('mousemove', handleMove);
+        canvas.addEventListener('mouseup', handleEnd);
+
+        canvas.addEventListener('touchstart', handleStart, { passive: false }); // { passive: false } aby użyć preventDefault
+        canvas.addEventListener('touchmove', handleMove, { passive: false });
+        canvas.addEventListener('touchend', handleEnd, { passive: false });
+
+        restartButton.addEventListener('click', startGame);
+
+        // Początkowe wyświetlenie ekranu startowego
+        gameOverScreen.style.display = 'flex';
+        scoreDisplay.style.display = 'none';
+        document.getElementById('finalScore').textContent = 0;
+        document.querySelector('#gameOverScreen h2').textContent = "Unikaj Bloków!";
+        document.querySelector('#gameOverScreen p').innerHTML = "Przesuwaj palcem w lewo/prawo, by sterować.";
+        restartButton.textContent = "Start";
+    </script>
 </body>
 </html>
